--- a/bin/build
+++ b/bin/build
@@ -10,12 +10,6 @@ echo "-----> Install heroku-buildpack-ssh-key"
 
 BUILD_DIR=$1
 VENDOR_DIR="$BUILD_DIR/vendor"
-ENV_DIR=$3
-
-echo $BUILDPACK_SSH_KEY
-
-# adapted from SectorLabs/heroku-buildpack-git-submodule
-BUILDPACK_SSH_KEY=$(<"$ENV_DIR/BUILDPACK_SSH_KEY")
 
 if [[ -z $BUILDPACK_SSH_KEY ]]; then
     echo "Did you forget to set BUILDPACK_SSH_KEY?" | indent
@@ -34,6 +28,6 @@ echo "-----> Installed SSH key from BUILDPACK_SSH_KEY"
 
 # install the ssh key
 ssh-keyscan -H github.com >> ~/.ssh/known_hosts 2> /dev/null
-cat "$ENV_DIR/BUILDPACK_SSH_KEY" > ~/.ssh/id_rsa
+cat "$BUILDPACK_SSH_KEY" > ~/.ssh/id_rsa
 echo >> ~/.ssh/id_rsa
 chmod 600 ~/.ssh/id_rsa
