--- a/bin/build
+++ b/bin/build
@@ -25,6 +25,6 @@ echo "-----> Installed SSH key from BUILDPACK_SSH_KEY"
 
 # install the ssh key
 ssh-keyscan -H github.com >> ~/.ssh/known_hosts 2> /dev/null
-cat "$BUILDPACK_SSH_KEY" > ~/.ssh/id_rsa
+echo "$BUILDPACK_SSH_KEY" > ~/.ssh/id_rsa
 echo >> ~/.ssh/id_rsa
 chmod 600 ~/.ssh/id_rsa
